--- a/styles.css
+++ b/styles.css
@@ -6,5 +6,5 @@ header{
     border-bottom:solid 2px rgb(55, 21, 207);
     padding: 20px;
     font-size: 30px;
-    color: rgb (55, 21, 207);
+    color:rgb(55, 21, 207))
 }
