--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    color: rgb(36, 207, 21);
+    color: rgb(255, 255, 255);
     background: rgb(0, 0, 0);
 }
 header{
@@ -10,4 +10,6 @@ header{
 }
 section{
     background: rgb(50, 20, 200);
+    padding-bottom: 80px;
+    padding-top: 80px;
 }
